# vexation

./: Cargo.toml  README.md  WHEREWASI.md  vexation.excalidraw
assets/: blue-marble.aseprite  blue-mask.aseprite  board.aseprite  die-sheet.aseprite  green-marble.aseprite  green-mask.aseprite  human-indicator.aseprite  marble-highlight.aseprite  mask.aseprite  palette.aseprite  power-fill.aseprite  red-marble.aseprite  red-mask.aseprite  tile-highlight.aseprite  title.aseprite  yellow-marble.aseprite  yellow-mask.aseprite
assets/buttons/: buttons.aseprite
assets/power-ups/: power-up-highlights.aseprite  power-up-sheet.aseprite
docs/: buttons.excalidraw  legend.excalidraw  main-menu-plugin.excalidraw  powerups.excalidraw  process-move.excalidraw  vexation.excalidraw
src/: buttons.rs  choose_color.rs  components.rs  computer_turn.rs  constants.rs  dice_roll.rs  end_turn.rs  events.rs  human_turn.rs  main.rs  main_menu.rs  next_player.rs  power.rs  process.rs  resources.rs  shared_systems.rs  system_sets.rs  turn_setup.rs  utils.rs  vexation.rs
src/system_sets/: choose_color.rs  computer_turn.rs  dice_roll.rs  human_turn.rs  next_player.rs  process_move.rs  turn_setup.rs
src/system_sets/human_turn/: idle.rs  selected.rs
