[package]
name = "aggravation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# TODO: remove the "dynamic" feature when we're done so the binary can be standalone
bevy = { version = "0.7.0", features = ["dynamic"] }
